# PF_instrumentacion-as

./: HARDWARE_CONNECTIONS.md  README.md  temp_build.ps1
main/: CMakeLists.txt  Kconfig.projbuild
main/headers/: ina226.h  lcd.h  wifi_manager.h
main/sources/: ina226.c  lcd.c  main.c  wifi_manager.c
